v0.3.0:
* Fixed error with seatalk flag in serial.c
* Fixed makefile for bsd/macos
* Improved error reporting for broadcast interfaces
* Fix failure-to-exit bug when using tcp server
* Special handling of and improved support for FIFOs
* Ignore SIGPIPE to avoid crashes writing to FIFOs
* Added append mode for output files
* Enable use of redirected standard input and output in background mode
* Added persist flag for FIFOs and TCP client connections

v0.2.10: 31st March 2013
* Fixed crash when interface error condition encountered on startup

v0.2.9: 4th March 2013
* Fixed bug with input interfaces exiting before output startup
* Updated documentation to correctly describe use of "device" option
* Fixed segv in file error handling
* Fixed crash with input-only tcp servers
* Added "-V" flag for version identification

v0.2.8: 16th January 2013
* Fixed bug in shutdown of bi-directional tcp server
* Minor cosmetic source tweaks
* Minor non-code adjustments for Debian packaging
* Added example configuration kplex.conf.ex

v0.2.7: 27th December 2012
* Fixed crash and hang on exit bug with unidirectional tcp servers

v0.2.6: 18th December 2012
* Fixed "port out of range" problem with UDP broadcast interfaces

v0.2.5: 10th December 2012
* Fixed various POSIX compatibility isses

v0.2.4: 30th November 2012
* Support for FreeBSD
* Explicit enabling of support for IPv6-mapped-IPv4 for platforms where this is
  disabled by default

v0.2.3: 28th November 2012
* Fixed multiple problems with broadcast interfaces
* Fixed bug in handling of unclosed quotes arround arguments

v0.2.2: 27th November 2012
* Changed user config file to ~/Library/Preferences/kplex.ini on OS X
* Source tidy to silence compiler warnings on OS X

v.0.2: 21st November 2012
* Initial public test release