@@ -7,7 +7,11 @@ v0.3.0:
 * Ignore SIGPIPE to avoid crashes writing to FIFOs
 * Added append mode for output files
 * Enable use of redirected standard input and output in background mode
-* Added persist flag for FIFOs and TCP client connections
+* Added persist flag for FIFOs
+* Added eol option for \r\n line termination with file interfaces
+* Make file output line buffered
+* Reduce max sentence size to the 80 chars it was always meant to be
+* Fixed tcp server filter inheritace bug
 
 v0.2.10: 31st March 2013
 * Fixed crash when interface error condition encountered on startup
